Table users {
  id integer [primary key]
  handle varchar
  is_admin boolean
  auth_bits varchar
}

Table posts {
  id integer [primary key]
  author_id integer
  upload_timestamp timestamp
  modified_timestamp timestamp
  release_timestamp timestamp
  archived boolean
  source_ref varchar
}

Table tags {
  id integer [primary key]
  name varchar
}

Table action_log {
  id integer [primary key]
  user integer
  ts timestamp
  action varchar
}

Ref: posts.author_id > users.id
Ref: tags.id <> posts.id
Ref: action_log.user > users.id
